# uefi-test

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
cmake/Modules/: FindGNUefi.cmake  FindOVMF.cmake
cmake/toolchains/: mingw64.cmake
conan-recipes/edk2/: conanfile.py
conan-recipes/gnu-binutils/: conanfile.py
conan-recipes/gnu-efi/: conanfile.py
conan-recipes/mingw64-toolchain/: conanfile.py
efi_scripts/: startup.nsh
scripts/: conan-bootstrap.bash  create_disk.bash  create_disk.py  efidebughelper.py
src/: main.c
